Add functioning generation with modular settings modal

--- a/settings.html
+++ b/settings.html
@@ -69,8 +69,7 @@
     </div>
     <div id="settings-pane">
     <form id="sampler-settings">
-      <p>Sampler Settings</p>
-      <label for="sampler">Sampling Method</label>
+      <label id="sampler-label" for="sampler">Sampling Method</label>
       <select id="sampler">
         <option value="openai">OpenAI Completions</option>
         <option value="openai-chat">OpenAI Chat Completions</option>
