--- a/settings.html
+++ b/settings.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="UTF-8" />
@@ -28,57 +28,94 @@
       #settings-tabs {
         display: flex;
         gap: 8px;
-        border-bottom: 1px solid rgba(0,0,0,.15);
+        border-bottom: 1px solid rgba(0, 0, 0, 0.15);
         margin-bottom: 10px;
       }
 
       #settings-tabs .tab-btn {
         appearance: none;
-	border: none;
-	background: transparent;
-	padding: 8px 12px;
-	cursor: pointer;
-	border-bottom: 2px solid transparent;
-	font-weight: 600;
+        border: none;
+        background: transparent;
+        padding: 8px 12px;
+        cursor: pointer;
+        border-bottom: 2px solid transparent;
+        font-weight: 600;
       }
 
       #settings-tabs .tab-btn.active {
-	border-color: #007aff;
-	color: #007aff;
+        border-color: #007aff;
+        color: #007aff;
       }
 
       /* Small table-ish layout helpers */
-      .row { display: flex; gap: 8px; align-items: center; margin: 6px 0; }
-      .row label { min-width: 160px; }
-      .divider { height: 1px; background: rgba(0,0,0,.08); margin: 12px 0; }
-      .btn {
-	appearance: none; border: 1px solid rgba(0,0,0,.2);
-	padding: 6px 10px; border-radius: 6px; cursor: pointer; background: #fff;
+      .row {
+        display: flex;
+        gap: 8px;
+        align-items: center;
+        margin: 6px 0;
       }
-      .btn.primary { background: #007aff; color: white; border-color: #007aff; }
-      .muted { opacity: .7; font-size: .9em; }
-      table.keys { width: 100%; border-collapse: collapse; margin-top: 8px; }
-      table.keys th, table.keys td { border-bottom: 1px solid rgba(0,0,0,.08); padding: 8px; text-align: left; }
-      .mono { font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, "Liberation Mono", monospace; }
+      .row label {
+        min-width: 160px;
+      }
+      .divider {
+        height: 1px;
+        background: rgba(0, 0, 0, 0.08);
+        margin: 12px 0;
+      }
+      .btn {
+        appearance: none;
+        border: 1px solid rgba(0, 0, 0, 0.2);
+        padding: 6px 10px;
+        border-radius: 6px;
+        cursor: pointer;
+        background: #fff;
+      }
+      .btn.primary {
+        background: #007aff;
+        color: white;
+        border-color: #007aff;
+      }
+      .muted {
+        opacity: 0.7;
+        font-size: 0.9em;
+      }
+      table.keys {
+        width: 100%;
+        border-collapse: collapse;
+        margin-top: 8px;
+      }
+      table.keys th,
+      table.keys td {
+        border-bottom: 1px solid rgba(0, 0, 0, 0.08);
+        padding: 8px;
+        text-align: left;
+      }
+      .mono {
+        font-family:
+          ui-monospace, SFMono-Regular, Menlo, Consolas, "Liberation Mono",
+          monospace;
+      }
     </style>
   </head>
   <body>
     <div id="settings-tabs">
-      <button class="tab-btn active" data-tab="sampler-settings">Sampler Settings</button>
+      <button class="tab-btn active" data-tab="sampler-settings">
+        Sampler Settings
+      </button>
       <button class="tab-btn" data-tab="api-keys">API Keys</button>
     </div>
     <div id="settings-pane">
-    <form id="sampler-settings">
-      <label id="sampler-label" for="sampler">Sampling Method</label>
-      <select id="sampler">
-        <option value="openai">OpenAI Completions</option>
-        <option value="openai-chat">OpenAI Chat Completions</option>
-        <option value="openrouter">OpenRouter API</option>
-        <option value="together">Together API</option>
-      </select>
-      <div id="menu-host"></div>
-    </form>
-    <script src="sampler-settings.js"></script>
+      <form id="sampler-settings">
+        <label id="sampler-label" for="sampler">Sampling Method</label>
+        <select id="sampler">
+          <option value="openai">OpenAI Completions</option>
+          <option value="openai-chat">OpenAI Chat Completions</option>
+          <option value="openrouter">OpenRouter API</option>
+          <option value="together">Together API</option>
+        </select>
+        <div id="menu-host"></div>
+      </form>
+      <script src="sampler-settings.js"></script>
     </div>
   </body>
 </html>
