--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="UTF-8" />
@@ -17,6 +17,13 @@
       body {
         font-family: sans-serif;
         display: flex;
+        margin: 0;
+        padding: 0;
+        height: 100vh;
+        min-width: 800px;
+        overflow-x: auto;
+        overflow-y: auto;
+        width: 100%;
       }
 
       input {
@@ -37,27 +44,6 @@
         font-size: 0.9em;
       }
 
-      #settings-pane {
-        width: 25%;
-      }
-
-      #settings-pane form {
-        display: flex;
-        flex-direction: column;
-        width: 200px;
-      }
-
-      #sampler-option-menu {
-        display: flex;
-        flex-direction: column;
-        width: 200px;
-      }
-
-      #sampler-option-menu label {
-        margin-top: 1em;
-        margin-bottom: 5px;
-      }
-
       #right-panes {
         display: flex;
         flex-direction: column;
@@ -75,19 +61,125 @@
         margin-bottom: 5px;
       }
 
+      .main-content {
+        display: flex;
+        flex: 1;
+        min-width: 600px;
+        overflow: hidden;
+      }
+
+      #nav-pane {
+        width: 25%;
+        min-width: 150px;
+        max-width: 350px;
+        background-color: #f8f9fa;
+        border-left: 1px solid #e9ecef;
+        overflow-y: auto;
+        padding: 16px;
+      }
+
+      /* Override injected styles from minisearch-integration.js */
+      #tree-container {
+        width: 100% !important;
+        margin-left: 0 !important;
+        margin-top: 0 !important;
+      }
+
+      #loom-tree-view {
+        margin-left: 0 !important;
+        width: 100% !important;
+      }
+
       #narrative-pane {
-        height: 100%;
-        width: 600px;
-        margin-left: 2em;
+        flex: 1;
+        min-width: 400px;
+        display: flex;
+        flex-direction: column;
+        overflow: hidden;
+        height: 100vh;
+      }
+
+      #top-bar {
+        border-bottom: 1px solid #e9ecef;
+        padding: 6px 16px;
+        min-height: 36px;
+        display: flex;
+        align-items: center;
+        background-color: white;
+      }
+
+      .top-bar-content {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+      }
+
+      .logo-title {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+      }
+
+      .app-logo {
+        width: 24px;
+        height: 24px;
+        object-fit: contain;
+      }
+
+      .app-title {
+        font-weight: 600;
+        font-size: 16px;
+        color: #333;
+      }
+
+      .file-info {
+        display: flex;
+        align-items: baseline;
+        gap: 8px;
+        font-size: 14px;
+        color: #666;
+      }
+
+      .tree-stats {
+        font-size: 12px;
+        color: #777;
+        margin-left: 12px;
+        display: flex;
+        align-items: baseline;
+        line-height: 1;
+      }
+
+      #current-filename {
+        font-weight: 500;
+      }
+
+      .unsaved-dot {
+        color: #dc3545;
+        font-weight: bold;
+        font-size: 18px;
+        animation: pulse 2s infinite;
+      }
+
+      @keyframes pulse {
+        0% {
+          opacity: 1;
+        }
+        50% {
+          opacity: 0.5;
+        }
+        100% {
+          opacity: 1;
+        }
       }
 
       #context {
-        width: 800px;
-        height: 100%;
+        flex: 1;
         display: flex;
         flex-direction: column;
         justify-content: center;
-        padding: 1rem;
+        padding: 12px;
+        min-height: 0;
       }
 
       .response {
@@ -105,10 +197,30 @@
       }
 
       .reroll {
+        background-color: var(--engineering-orange);
+        color: white;
+        border: none;
+        border-radius: 12px;
+        padding: 0 12px;
         font-size: 1.3em;
+        font-weight: normal;
         cursor: pointer;
-        height: 25px;
-        padding-left: 0.75rem;
+        display: flex;
+        align-items: center;
+        gap: 4px;
+        transition: background-color 0.2s;
+        height: 36px;
+        margin-right: 8px;
+        box-sizing: border-box;
+        white-space: nowrap;
+      }
+
+      .reroll:hover {
+        background-color: var(--barn-red);
+      }
+
+      .reroll span {
+        font-size: 0.8em;
       }
 
       #rewrite-button {
@@ -130,18 +242,42 @@
       .thumbs {
         font-size: 1.3em;
         cursor: pointer;
-        height: 25px;
-        opacity: 0.3;
-        transition: opacity 0.3s;
+        height: 36px;
+        width: 36px;
+        border-radius: 8px;
+        background-color: #007bff;
+        color: white;
+        border: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        opacity: 0.7;
+        transition: all 0.2s;
+        margin-right: 4px;
+        box-sizing: border-box;
       }
 
       .thumbs:hover {
         opacity: 1;
+        background-color: #0056b3;
       }
 
       .chosen {
         font-size: 1.3em;
+        cursor: pointer;
+        height: 36px;
+        width: 36px;
+        border-radius: 8px;
+        background-color: #0056b3;
+        color: white;
+        border: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         opacity: 1;
+        transition: all 0.2s;
+        margin-right: 4px;
+        box-sizing: border-box;
       }
 
       .branch-controls {
@@ -159,32 +295,122 @@
 
       .branch-control-buttons {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
+        gap: 8px;
+        min-height: 36px;
+        align-items: flex-end;
+      }
+
+      .thumbs-container {
+        display: flex;
+        gap: 4px;
+        align-items: center;
       }
 
       #prompt-branch-controls {
         margin-top: initial;
-        margin-left: 1em;
+        margin-left: auto;
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        min-width: 0;
+        overflow-y: auto;
+        max-height: 200px;
+        align-items: flex-end;
+      }
+
+      #prompt-branch-controls select {
+        border: none;
+        outline: none;
+        box-shadow: 0 0 3px rgba(0, 0, 0, 0.4);
+        padding: 5px;
+        font-size: 0.9em;
+        background-color: white;
+        border-radius: 4px;
+        margin-right: 8px;
+        min-width: 120px;
+        max-width: 200px;
+        flex-shrink: 0;
+      }
+
+      .generate-button-container {
+        display: inline-block;
+        margin-left: 16px;
+        width: auto !important;
+      }
+
+      #gen-controls {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        gap: 8px;
+        flex-shrink: 0;
+      }
+
+      .dropdowns-row {
+        display: flex;
+        gap: 8px;
+        align-items: center;
+      }
+
+      .die-and-generate-container {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+      }
+
+      .generate-button-container .reroll {
+        width: auto !important;
+        max-width: none !important;
+        flex: none !important;
       }
 
       #controls {
         background-color: white;
-        justify-content: center;
-        width: 600px;
-        bottom: 0;
+        border-top: 1px solid #e9ecef;
+        padding: 6px 16px;
+        min-height: 48px;
         display: flex;
         flex-direction: row;
+        align-items: flex-start;
+        flex-shrink: 0;
+        gap: 16px;
+      }
+
+      #controls-left {
+        display: flex;
+        flex-direction: column;
+        gap: 4px;
+        flex: 1;
+      }
+
+      #node-summary-display {
+        font-size: 12px;
+        font-weight: 500;
+        color: #666;
+        max-width: 300px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
+
+      #thumbs-display {
+        display: flex;
+        gap: 4px;
       }
 
       #controls-form {
-        width: 600px;
+        display: flex;
+        align-items: center;
+        min-width: 0;
+        flex-shrink: 0;
       }
 
       #buttons {
-        margin-top: 1px;
-        margin-bottom: 1em;
         display: flex;
         flex-direction: row;
+        align-items: center;
+        gap: 8px;
       }
 
       #buttons #session-buttons {
@@ -194,13 +420,17 @@
       #editor {
         border: none;
         outline: none;
-        height: 800px;
-        width: 600px;
+        flex: 1;
+        width: 100%;
         overflow-y: auto;
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
-        padding: 5px;
+        padding: 12px;
         box-sizing: border-box;
         resize: none;
+        font-family: inherit;
+        font-size: 14px;
+        line-height: 1.5;
+        min-height: 0;
       }
 
       .user-prompt {
@@ -208,14 +438,14 @@
       }
 
       #die {
-        height: 35px;
-        width: 50px;
-        font-size: 30px;
-        display: inline-block;
+        height: 32px;
+        width: 40px;
+        font-size: 24px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         transform-origin: center center;
         animation: spin 0.4s linear infinite;
-        text-align: center; /* Center the character horizontally */
-        line-height: 35px; /* Center the character vertically */
       }
 
       @keyframes spin {
@@ -227,12 +457,17 @@
         }
       }
       #batch-item-index {
-        margin-left: 0.5em;
-        align-self: center;
+        font-size: 14px;
+        font-weight: 500;
+        color: #666;
+        margin-left: 8px;
       }
 
       #prompt-token-counter {
         margin-left: auto;
+        font-size: 14px;
+        font-weight: 500;
+        color: #666;
       }
 
       .over-token-limit {
@@ -263,23 +498,24 @@
       /* Tree view styling */
 
       .hidden-parents > a::before {
-        content: '⋯ ';
+        content: "⋯ ";
         color: rgba(41, 49, 33, 0.6);
         font-weight: bold;
         font-size: 0.9em;
       }
 
       .hidden-children > a::after {
-        content: ' ⋯';
+        content: " ⋯";
         color: rgba(41, 49, 33, 0.6);
         font-weight: bold;
         font-size: 0.9em;
       }
 
-    #loom-tree-view {
+      #loom-tree-view {
         flex: 1;
         margin-left: 0px;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+        font-family:
+          -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
         font-size: 14px;
         line-height: 1.3;
       }
@@ -297,7 +533,7 @@
       }
 
       #loom-tree-view ul::before {
-        content: '';
+        content: "";
         position: absolute;
         left: 0;
         top: 0;
@@ -307,7 +543,7 @@
       }
 
       #loom-tree-view li:last-child::after {
-        content: '';
+        content: "";
         position: absolute;
         left: -1.2em;
         top: 0.8em;
@@ -318,7 +554,7 @@
       }
 
       #loom-tree-view li::before {
-        content: '';
+        content: "";
         position: absolute;
         left: -1.2em;
         top: 0.8em;
@@ -348,7 +584,9 @@
         transition: all 0.2s ease;
         position: relative;
       }
-      #loom-tree-view > ul::before { content: none; }
+      #loom-tree-view > ul::before {
+        content: none;
+      }
       .downvoted,
       .downvoted * {
         opacity: 0.7;
@@ -390,7 +628,7 @@
       }
 
       .unread-tree-node > a::before {
-        content: '● ';
+        content: "● ";
         color: #7bb3f0;
         font-size: 0.7em;
         display: inline;
@@ -398,29 +636,28 @@
       }
 
       .type-user > a::after {
-        content: ' 👤';
+        content: " 👤";
         font-size: 0.8em;
       }
 
       .upvoted > a::after {
-        content: ' 👍';
+        content: " 👍";
         font-size: 0.8em;
       }
 
       .downvoted > a::after {
-        content: ' 👎';
+        content: " 👎";
         font-size: 0.8em;
       }
 
-
       /* Conflicts: hidden + votes */
       .hidden-parents.upvoted > a::after {
-        content: ' 👍⋯';
+        content: " 👍⋯";
         font-size: 0.8em;
       }
 
       .hidden-parents.downvoted > a::after {
-        content: ' 👎⋯';
+        content: " 👎⋯";
         font-size: 0.8em;
       }
 
@@ -498,53 +735,59 @@
     </style>
   </head>
   <body>
-    <div id="narrative-pane">
-      <div id="context">
-        <textarea id="editor" placeholder="Your prompt goes here."></textarea>
-      </div>
-      <div id="controls">
-        <div id="dice-holder"></div>
-        <div id="controls-form">
-          <div id="buttons">
-            <span id="batch-item-index"></span>
-            <div id="session-buttons">
-              <span id="prompt-token-counter">0</span>
+    <div id="main-content" class="main-content">
+      <div id="narrative-pane">
+        <div id="top-bar">
+          <div class="top-bar-content">
+            <div class="logo-title">
+              <img
+                src="assets/minihf_logo_no_text.png"
+                alt="MiniHF Logo"
+                class="app-logo"
+              />
+              <span class="app-title">MiniHF MiniLoom</span>
+            </div>
+            <div class="file-info">
+              <span id="current-filename">Untitled</span>
+              <span
+                id="unsaved-indicator"
+                class="unsaved-dot"
+                style="display: none"
+                >•</span
+              >
+              <div id="tree-stats" class="tree-stats"></div>
             </div>
           </div>
         </div>
-      </div>
-      <div id="errors">
-        <p id="error-message"></p>
-      </div>
-    </div>
 
-    <!-- Original tree view structure -->
-    <div id="loom-tree-view"></div>
+        <div id="context">
+          <textarea id="editor" placeholder="Your prompt goes here."></textarea>
+        </div>
 
-    
-    <div id="right-panes" style="display:none;"">
-      <div id="agent-pane">
-        <form>
-          <p>Weave Tree Search Settings</p>
-          <div>
-            <input type="checkbox" id="use-weave" name="use-weave" unchecked />
-            <label for="use-weave"
-              >Use Weave Algorithm To Search (AutoLoom)</label
-            >
+        <div id="controls">
+          <div id="controls-left">
+            <div id="node-summary-display"></div>
+            <div id="controls-form">
+              <div id="buttons">
+                <span id="batch-item-index"></span>
+                <div id="session-buttons">
+                  <span id="prompt-token-counter">0</span>
+                </div>
+              </div>
+            </div>
+            <div id="thumbs-display"></div>
           </div>
-          <label for="new-tokens">Max Tokens Per Weave:</label>
-          <input type="text" id="new-tokens" name="new-tokens" value="256" />
-          <label for="budget">Max Node Expansion Budget</label>
-          <input type="text" id="budget" name="budget" value="72" />
-        </form>
+          <div id="dice-holder"></div>
+        </div>
+        <div id="errors">
+          <p id="error-message"></p>
+        </div>
       </div>
-      <div id="chat-pane"></div>
+      <div id="nav-pane">
+        <div id="loom-tree-view"></div>
+      </div>
     </div>
-
-    <!-- Include both original and search scripts -->
     <script src="renderer.js"></script>
-    <!-- Add the MiniSearch integration script after renderer.js -->
-    <!-- You'll need to save the search code as minisearch-integration.js -->
     <script src="minisearch-integration.js"></script>
   </body>
 </html>
